fix overflow issue

--- a/devblog/devblog/ClientApp/src/components/styles/Comment.css
+++ b/devblog/devblog/ClientApp/src/components/styles/Comment.css
@@ -14,6 +14,7 @@
 
 .comment p {
     padding-left: 5px;
+    word-wrap: break-word;
     width: 85%;
 }
 
